# MTP

./: .gitignore  Makefile  analyse.py  main.py  pyproject.toml  run.sh  temp.py
config/: run.yaml
results/: beir_webis-touche2020_result.csv  old.csv
temp/: main.py  temp.py
